logs/fcdjangoutils.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/fcdjangoutils'...
Compiling './lib/python3.5/site-packages/fcdjangoutils/db.py'...
***   File "./lib/python3.5/site-packages/fcdjangoutils/db.py", line 11
    print "Entering a transaction"
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/fcdjangoutils/jsonview.py'...
***   File "./lib/python3.5/site-packages/fcdjangoutils/jsonview.py", line 154
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fcdjangoutils/locale'...
Listing './lib/python3.5/site-packages/fcdjangoutils/locale/no'...
Listing './lib/python3.5/site-packages/fcdjangoutils/locale/no/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/fcdjangoutils/management'...
Listing './lib/python3.5/site-packages/fcdjangoutils/management/commands'...
Compiling './lib/python3.5/site-packages/fcdjangoutils/management/commands/exportdbconfig.py'...
***   File "./lib/python3.5/site-packages/fcdjangoutils/management/commands/exportdbconfig.py", line 20
    print 'export DB_%s_%s="%s"' % (dbname.upper(), key.upper(), value)
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fcdjangoutils/management/commands/makemessagesworkaround.py'...
***   File "./lib/python3.5/site-packages/fcdjangoutils/management/commands/makemessagesworkaround.py", line 169
    print "processing language", locale
                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/fcdjangoutils/media'...
Listing './lib/python3.5/site-packages/fcdjangoutils/media/fcdjangoutils'...
Listing './lib/python3.5/site-packages/fcdjangoutils/media/fcdjangoutils/css'...
Listing './lib/python3.5/site-packages/fcdjangoutils/media/fcdjangoutils/js'...
Listing './lib/python3.5/site-packages/fcdjangoutils/media/fcdjangoutils/js/jquery-validate'...
Listing './lib/python3.5/site-packages/fcdjangoutils/media/fcdjangoutils/js/jquery-validate/demo'...
Listing './lib/python3.5/site-packages/fcdjangoutils/media/fcdjangoutils/js/jquery-validate/demo/captcha'...
Listing './lib/python3.5/site-packages/fcdjangoutils/media/fcdjangoutils/js/jquery-validate/demo/css'...
Listing './lib/python3.5/site-packages/fcdjangoutils/media/fcdjangoutils/js/jquery-validate/demo/images'...
Listing './lib/python3.5/site-packages/fcdjangoutils/media/fcdjangoutils/js/jquery-validate/demo/js'...
Listing './lib/python3.5/site-packages/fcdjangoutils/media/fcdjangoutils/js/jquery-validate/demo/login'...
Listing './lib/python3.5/site-packages/fcdjangoutils/media/fcdjangoutils/js/jquery-validate/demo/marketo'...
Listing './lib/python3.5/site-packages/fcdjangoutils/media/fcdjangoutils/js/jquery-validate/demo/milk'...
Listing './lib/python3.5/site-packages/fcdjangoutils/media/fcdjangoutils/js/jquery-validate/demo/multipart'...
Listing './lib/python3.5/site-packages/fcdjangoutils/media/fcdjangoutils/js/jquery-validate/demo/tabs'...
Listing './lib/python3.5/site-packages/fcdjangoutils/media/fcdjangoutils/js/jquery-validate/demo/tinymce'...
Listing './lib/python3.5/site-packages/fcdjangoutils/media/fcdjangoutils/js/jquery-validate/lib'...
Listing './lib/python3.5/site-packages/fcdjangoutils/media/fcdjangoutils/js/jquery-validate/localization'...
Listing './lib/python3.5/site-packages/fcdjangoutils/media/fcdjangoutils/js/jquery-validate-1.10.0'...
Compiling './lib/python3.5/site-packages/fcdjangoutils/middleware.py'...
***   File "./lib/python3.5/site-packages/fcdjangoutils/middleware.py", line 29
    print "Using mock request as no real request was found"
                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/fcdjangoutils/monkeypatches'...
Compiling './lib/python3.5/site-packages/fcdjangoutils/querytree.py'...
***   File "./lib/python3.5/site-packages/fcdjangoutils/querytree.py", line 68
    print "Missing attribute", name, "in", self.__data
                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/fcdjangoutils/templates'...
Listing './lib/python3.5/site-packages/fcdjangoutils/templates/fcdjangoutils'...
Listing './lib/python3.5/site-packages/fcdjangoutils/templatetags'...
Compiling './lib/python3.5/site-packages/fcdjangoutils/templatetags/mezzanine_helpers.py'...
***   File "./lib/python3.5/site-packages/fcdjangoutils/templatetags/mezzanine_helpers.py", line 19
    print "Error: unable to get mezzanine page:", slug_name
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/fcdjangoutils/templatetags/widgettag_tags.py'...
***   File "./lib/python3.5/site-packages/fcdjangoutils/templatetags/widgettag_tags.py", line 12
    raise django.template.TemplateSyntaxError, "%r tag requires one argument" % token.contents.split()[0]
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fcdjangoutils/timer.py'...
***   File "./lib/python3.5/site-packages/fcdjangoutils/timer.py", line 17
    print "Timer exited through exception"
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/fcdjangoutils/widgettagmiddleware.py'...
***   File "./lib/python3.5/site-packages/fcdjangoutils/widgettagmiddleware.py", line 21
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fcdjangoutils-0.0.8.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
